# SYNmod

./: Cargo.toml
workdir/: dna.yaml  happ.yaml
zomes/product_catalog/coordinator/: Cargo.toml
zomes/product_catalog/coordinator/src/: all_products.rs  category_setup.rs  favorite.rs  lib.rs  product.rs  products_by_category.rs
zomes/product_catalog/integrity/src/: lib.rs  product.rs
zomes/syn/coordinator/: Cargo.toml
zomes/syn/coordinator/src/: cart.rs  lib.rs
zomes/syn/coordinator/src/api_fetch/: api_client.rs
zomes/syn/integrity/src/: cart.rs  lib.rs
