[package]
authors = ["guillem.cordoba@gmail.com", "eric@harris-braun.com"]
edition = "2021"
name = "hc_zome_syn_coordinator"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_syn_coordinator"

[dependencies]
itertools = "0.10"
serde = "1"
base64 = "0.13"
serde_json = "1.0"
serde_yaml = { workspace = true }
hdk = { workspace = true, features = ["properties"] }
hc_zome_syn_integrity = { path = "../integrity" }

[features]
default = ["properties"]
properties = []